<resources>
    <string name="app_name">Zambian Candlemaker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="caution_soft_pause">Caution - About to Perform Soft Pause!</string>
    <string name="pause_are_you_sure">You are about to commit a soft pause, bringing the machine to a stop at its next possible convenience. Are you sure you want to do this?</string>
    <string name="zambian_candlemaker_app_header">Zambian Candlemaker App</string>
    <string name="exit_are_you_sure">You Are About to Exit the Application! Are You Sure?</string>
    <string name="yes_exit">Yes, Exit</string>
    <string name="no_stay">No, Stay</string>
    <string name="operator">Operator</string>
    <string name="admin_make_profile">Administrator - Make Profile</string>
    <string name="admin_make_program">Administrator - Make Program</string>
    <string name="efficiency_off">Efficiency Mode Off</string>
    <string name="efficiency_on">Efficiency Mode On</string>
    <string name="efficiency_mode">Efficiency Mode</string>
    <string name="dips_per_revolution">Dips Per Revolution</string>
    <string name="rotational_jog">Rotational Jog</string>
    <string name="apply">Apply</string>
    <string name="degrees">degrees</string>
    <string name="vertical_jog">Vertical Jog</string>
    <string name="choose_program_title">Choose Current Program</string>
    <string name="operator_frag_name">Operator</string>
    <string name="graph_frag_name">Graph</string>
    <string name="default_title">Default Title</string>
    <string name="default_description">Default Description</string>
    <string name="hash">HASH</string>
    <string name="options">Options</string>
    <string name="time_delay">Time Delay:</string>
    <string name="general_program_settings_prompt">General Program Settings and Parameters</string>
    <string name="save_new_program">Save New Program</string>
    <string name="graph_make_profile">Make Graph Profile</string>
    <string name="choose_profile">Choose Profile</string>
    <string name="depth">Depth</string>
    <string name="time">Time(ms)</string>
    <string name="edit_current_profile">Edit Profile</string>
    <string name="time_title">Time:</string>
    <string name="depth_title">Depth:</string>
    <string name="confirm">Confirm</string>
    <string name="edit_points">Edit points for</string>
    <string name="save_profile">Save Profile</string>
    <string name="new_profile_text">New Profile</string>
    <string name="save_confirmation_text">Check to overwrite profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="edit_description">Edit Description</string>
    <string name="dialog_choose_profile_title">Choose Profile</string>
    <string name="dialog_select_profile_message">Please select a profile:</string>
    <string name="accept_string">ACCEPT</string>
    <string name="dialog_delete_profile_title">Delete Profile?</string>
    <string name="dialog_delete_profile_message">"Are you sure you want to delete the profile "</string>
    <string name="question_mark">\?</string>
    <string name="administrator_modify_programs">Administrator - Modify Programs</string>
    <string name="default_title_save_dialog">DefaultTitle</string>
    <string name="default_description_save_dialog">DefaultDescription</string>
    <string name="please_enter_a_title">Please Enter a Title</string>
    <string name="please_enter_a_description">Please Enter a Description</string>
    <string name="administrator_lock">Administrator Lock</string>
    <string name="log_off_admin_functions">Log Off Administrator Functions</string>
    <string name="admin_mod_del_frag_name">ADMIN_MOD_DEL</string>
    <string name="admin_program_frag_name">ADMIN_PROGRAM</string>
    <string name="graph_make_prog_frag_name">GRAPH_MAKE_PROFILE</string>
    <string name="change_password">Change Administrator Password</string>
    <string name="change_administrator_password">Change Administrator Password</string>
    <string name="mm">mm</string>
    <string name="ms">ms</string>
    <string name="applying_vert_jog">Applying Vertical Jog Selection</string>
    <string name="applying_rot_jog">Applying Rotational Jog Selection</string>
    <string name="applying_dips_per">Applying Dips Per Rev. Selection</string>
    <string name="available_programs">Available Programs:</string>
    <string name="are_you_sure_program">Are You Sure You Want to Begin This Program?</string>
    <string name="initialize_admin_pass">"Initialize Administrator Password: "</string>
    <string name="waiting_message_sending">Waiting on Message Sending</string>
</resources>
