<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_operator"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/operator" />
        <item
            android:id="@+id/nav_administrator_program"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/admin_make_program" />
        <item
            android:id="@+id/nav_administrator_mod_del_program"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/administrator_modify_programs" />
        <item
            android:id="@+id/nav_administrator_profile"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/admin_make_profile" />
        <item
            android:id="@+id/nav_graph_make_profile"
            android:icon="@drawable/ic_graph"
            android:title="@string/graph_make_profile"/>
    </group>
</menu>
