<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_choose_program"
        android:orderInCategory="0"
        android:title="@string/choose_program_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_choose_profile"
        android:orderInCategory="10"
        android:title="@string/choose_profile"
        android:visible="false"
        />
    <item
        android:id="@+id/action_new_profile"
        android:orderInCategory="20"
        android:title="@string/new_profile_text"
        android:visible="false"
        />
    <item
        android:id="@+id/action_delete_profile"
        android:orderInCategory="30"
        android:title="Delete Profile"
        android:visible="false"
        />
</menu>
